<resources>
    <string name="app_name">EditorA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="sd_storage">SD Storage</string>
    <string name="sort">sort</string>
    <string name="rename_file">rename file</string>
    <string name="pick_date">pick date</string>
    <string name="pick_time">pick time</string>
</resources>
