<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_menu"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="80"
        app:showAsAction="ifRoom"
        android:onClick="onClick"
        android:title="@string/sort"
        />

    <item
        android:id="@+id/date_menu"
        android:icon="@drawable/ic_date_range_white_24dp"
        android:orderInCategory="80"
        app:showAsAction="ifRoom"
        android:onClick="onClick"
        android:title="@string/pick_date"
        />

    <item
        android:id="@+id/time_menu"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:orderInCategory="80"
        app:showAsAction="ifRoom"
        android:onClick="onClick"
        android:title="@string/pick_time"
        />

    <item
        android:id="@+id/action_rename"
        android:orderInCategory="90"
        android:title="@string/rename_file"
        android:onClick="onClick"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
